# PParMetrics-auto

./: .gitmodules  ACCURACY  CMakeLists.txt  O  README.md  REPORT.icc.inline.excel  REPORT.icc.no-inline.excel  REPORT.metrics.excel  REPORT.omp  RESULT  data.csv  intermediate.xls  labels.ods  labels.xlsx  leave-one-out.ods  loop_class_table.xls  loop_parallelisation.ods  loop_parallelisation.xls  ml-accuracy-bench-kfold.ods  ml-accuracy-kfold.ods  ml-accuracy-results.ods  ml-features.xls  new-labels.csv  new-labels.xlsx  oracle_omp_parallelisation.ods  probabilities.odg  report.biased  report.biased_omp  report.conservative  report.conservative_omp  run_benchmarks.sh  runtime_vs_prob.odg
PPar_lunch_talk/: .~lock.Analysis.xls#  .~lock.Learning_Loop_Parallelisability.odp#  .~lock.Learning_Loop_Parallelisability.ppt#  .~lock.topic.odt#  Analysis.xls  Learning_Loop_Parallelisability.odp  topic.odt
accuracy-reports/: dt.report  split_0.tree3.dot  split_0.tree5.dot  split_1.tree3.dot  split_1.tree5.dot  split_10.tree3.dot  split_10.tree5.dot  split_11.tree3.dot  split_11.tree5.dot  split_12.tree3.dot  split_12.tree5.dot  split_13.tree3.dot  split_13.tree5.dot  split_14.tree3.dot  split_14.tree5.dot  split_15.tree3.dot  split_15.tree5.dot  split_16.tree3.dot  split_16.tree5.dot  split_17.tree3.dot  split_17.tree5.dot  split_18.tree3.dot  split_18.tree5.dot  split_19.tree3.dot  split_19.tree5.dot  split_2.tree3.dot  split_2.tree5.dot  split_20.tree3.dot  split_20.tree5.dot  split_21.tree3.dot  split_21.tree5.dot  split_22.tree3.dot  split_22.tree5.dot  split_23.tree3.dot  (+87 more)
(+7013 files in other folders)
